--- a/configure.ac
+++ b/configure.ac
@@ -62,6 +62,15 @@ else
 fi
 AC_PROG_CXX
 
+dnl By default, libtool for mingw refuses to link static libs into a dll for
+dnl fear of mixing pic/non-pic objects, and import/export complications. Since
+dnl we have those under control, re-enable that functionality.
+case $host in
+  *mingw*)
+     lt_cv_deplibs_check_method="pass_all"
+  ;;
+esac
+
 AC_ARG_WITH([seccomp],
   [AS_HELP_STRING([--with-seccomp],
   [enable experimental syscall sandbox feature (-sandbox), default is yes if seccomp-bpf is detected under Linux x86_64])],
