--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,18 @@
 
 *.exe
 *.pdb
-src/bitcoin
-src/bitcoind
-src/bitcoin-cli
-src/bitcoin-gui
-src/bitcoin-node
-src/bitcoin-tx
-src/bitcoin-util
-src/bitcoin-chainstate
-src/bitcoin-wallet
+src/qtum
+src/qtumd
+src/qtum-cli
+src/qtum-gui
+src/qtum-node
+src/qtum-tx
+src/qtum-util
+src/qtum-chainstate
+src/qtum-wallet
 src/test/fuzz/fuzz
-src/test/test_bitcoin
-src/qt/test/test_bitcoin-qt
+src/test/test_qtum
+src/qt/test/test_qtum-qt
 
 # autoreconf
 Makefile.in
@@ -92,15 +92,15 @@ src/qt/bitcoin-qt.includes
 *.qm
 Makefile
 !depends/Makefile
-src/qt/bitcoin-qt
-Bitcoin-Qt.app
+src/qt/qtum-qt
+Qtum-Qt.app
 
 # Qt Creator
 Makefile.am.user
 
 # Unit-tests
 Makefile.test
-bitcoin-qt_test
+qtum-qt_test
 
 # Resources cpp
 qrc_*.cpp
@@ -150,3 +150,9 @@ dist/
 /guix-build-*
 
 /ci/scratch/
+
+.cproject
+.project
+.settings/language.settings.xml
+src/test/buildenv.py
+Debug
